# tools

./: CMakeLists.txt  LICENSE  README  README.md  allocation_transaction.hpp  array.hpp  array_wrapper.hpp  backtrace.cpp  backtrace.hpp  bad_type.hpp  bit_cast.hpp  c_array.hpp  chrono.hpp  comparison.hpp  compiler_detection.hpp  constructor_call.hpp  container_utils.hpp  ct_array.cpp  ct_array.hpp  ct_list.hpp  ct_string.hpp  ct_tuple.hpp  demangle.hpp  embed.cpp  embed.hpp  empty.hpp  enable_if.hpp  endianness.hpp  enum.hpp  event.hpp  exception.hpp  execute_pack.hpp  float_utils.hpp  fmt_utils.hpp  frame_allocation.hpp  fs_utils.hpp  function.hpp  genseq.hpp  integer_tools.hpp  log_type.cpp  (+36 more)
_tests/: CMakeLists.txt  FindLibUring.cmake  async.cpp  io.cpp  io_server.cpp  rpc_decl.hpp  rpc_stubs.cpp  rpc_target_a.cpp  rpc_target_b.cpp  task_manager_helper.hpp  threading.cpp
async/: async.hpp  chain.cpp  chain.hpp  chain2.hpp  multi_chain.hpp
cmake/: FindLibUring.cmake
cmdline/: arg_struct.hpp  cmdline.hpp  conversion_helpers.hpp  parse.hpp
debug/: assert.hpp  cl_errors.hpp  debug.cpp  unix_errors.hpp  vk_errors.hpp
hash/: fnv1a.hpp  hash.hpp
id/: id.hpp  string_id.cpp  string_id.hpp
io/: connections.hpp  context.cpp  context.hpp  io.hpp  ip.hpp  network_helper.cpp  network_helper.hpp
logger/: logger.cpp  logger.hpp  multiplexed_stream.hpp
move_only_function/: move_only_function.hpp
mt_check/: deque.hpp  map.hpp  mt_check_base.cpp  mt_check_base.hpp  set.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
regexp/: atom.hpp  operator.hpp  regexp.hpp
rle/: concepts.hpp  enum.hpp  generic_type.cpp  generic_type.hpp  helpers.hpp  rle.hpp  rle_decoder.hpp  rle_encoder.hpp  serialization_metadata.cpp  serialization_metadata.hpp  struct_helper.hpp  walker.hpp
rpc/: adapter.hpp  rpc.cpp  rpc.hpp
struct_metadata/: extra_metadata.hpp  fmt_support.hpp  struct_metadata.hpp  type_to_string.cpp  type_to_string.hpp
threading/: named_threads.cpp  named_threads.hpp  stats.hpp  task.cpp  task.hpp  task_group_graph.cpp  task_group_graph.hpp  task_manager.cpp  task_manager.hpp  threading.hpp  types.cpp  types.hpp  utilities.hpp
threading/utilities/: for_each.hpp  rate_limit.cpp  rate_limit.hpp
